remove namespace field
